source/nodejs/adaptivecards-site/themes/adaptivecards/source/css/extracted.css
/*! CSS Used from: https://docs.microsoft.com/_themes/docs.theme/master/en-us/_themes/css/ab552cd0.site-ltr.css */
:root {
	--black: #000;
	--black-hover: #2e2e2e;
	--black-active: #363636;
	--black-box-shadow: rgba(0, 0, 0, .25);
	--black-static: rgba(0, 0, 0, .999);
	--black-10: rgba(0, 0, 0, .1);
	--black-20: rgba(0, 0, 0, .2);
	--black-80: rgba(0, 0, 0, .8);
	--black-bis: #171717;
	--black-ter: rgba(46, 46, 46, .999);
	--grey-darkest: hsla(0, 0%, 9%, .999);
	--grey-darker: #303030;
	--grey-darker-hover: rgba(54, 54, 54, .999);
	--grey-darker-active: #3b3b3b;
	--grey-darker-box-shadow: rgba(46, 46, 46, .25);
	--grey-darker-static: rgba(46, 46, 46, .998);
	--grey-dark-30: rgba(54, 54, 54, .3);
	--grey-dark: #454545;
	--grey-dark-hover: #4d4d4d;
	--grey-dark-active: #525252;
	--grey-dark-box-shadow: rgba(69, 69, 69, .25);
	--grey-dark-text: rgba(69, 69, 69, .999);
	--grey: #757575;
	--grey-hover: #7d7d7d;
	--grey-active: #828282;
	--grey-box-shadow: hsla(0, 0%, 46%, .25);
	--grey-light: #ababab;
	--grey-lighter: #e3e3e3;
	--grey-lightest: #f2f2f2;
	--grey-50: hsla(0, 0%, 52%, .5);
	--blue-darkest: #00183d;
	--blue-darker: #002d70;
	--blue-dark: #0041a3;
	--blue-static: #0150c6;
	--blue: #0050c7;
	--blue-text: rgba(0, 80, 199, .999);
	--blue-bg: rgba(0, 0, 0, .998);
	--blue-hover: #0056d6;
	--blue-active: #005ae0;
	--blue-box-shadow: rgba(0, 80, 199, .25);
	--blue-light: #0a6cff;
	--blue-lighter: #579aff;
	--blue-lightest: #a3c8ff;
	--blue-05: rgba(0, 80, 199, .05);
	--blue-10: rgba(0, 80, 199, .1);
	--blue-15: rgba(0, 80, 199, .15);
	--blue-80: rgba(0, 80, 199, .8);
	--white: #fff;
	--white-hover: #f7f7f7;
	--white-active: hsla(0, 0%, 95%, .999);
	--white-box-shadow: hsla(0, 0%, 95%, .25);
	--white-static: hsla(0, 0%, 100%, .999);
	--white-80: hsla(0, 0%, 100%, .8);
	--white-50: hsla(0, 0%, 100%, .5);
	--white-90: hsla(0, 0%, 100%, .9);
	--white-bis: #fafafa;
	--white-ter: #f0f0f0;
	--white-ter-hover: #e8e8e8;
	--white-ter-active: hsla(0, 0%, 89%, .999);
	--white-ter-box-shadow: hsla(0, 0%, 94%, .25);
	--breadcrumb-background: #f1f3f4;
	--grey-to-blue: hsla(0, 0%, 9%, .998);
	--cyan: #006c8a;
	--cyan-bg: #dbf7ff;
	--cyan-text: #006a8a;
	--cyan-hover: #007899;
	--cyan-active: #0080a3;
	--cyan-box-shadow: rgba(0, 108, 138, .25);
	--green: #007a5a;
	--green-bg: #eafaf6;
	--green-text: #00664b;
	--green-hover: #008a65;
	--green-active: #00946c;
	--green-box-shadow: rgba(0, 122, 90, .25);
	--yellow: #fb0;
	--yellow-bg: #fdf0ed;
	--yellow-text: #ac2f15;
	--yellow-hover: #e6b328;
	--yellow-active: #e7b732;
	--yellow-box-shadow: rgba(233, 91, 63, .25);
	--red: #7e1117;
	--red-bg: #fdedee;
	--red-text: #7e1115;
	--red-hover: #8b1319;
	--red-active: #94141b;
	--red-box-shadow: rgba(126, 17, 23, .25);
	--purple: #673ab6;
	--purple-bg: #ede8f8;
	--purple-text: #351d5d;
	--purple-hover: #6e3dc2;
	--purple-active: #7445c4;
	--purple-box-shadow: rgba(103, 58, 182, .25);
	--code-header-background: hsla(0, 0%, 97%, .999)
}

body {
	font-family: Segoe UI, SegoeUI, Segoe WP, Helvetica Neue, Helvetica, Tahoma, Arial, sans-serif;
	font-weight: 400;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
}

code,
pre {
	line-height: 19px;
}

code,
pre {
	-moz-osx-font-smoothing: auto;
	-webkit-font-smoothing: auto;
	font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, sans-serif !important;
}

h1,
h2,
h3 {
	font-weight: 600;
}

.docon {
	font-family: docons;
	font-size: inherit;
	speak: none;
	display: inline-block;
	font-style: normal;
	font-weight: 400;
	font-variant: normal;
	text-transform: none;
	text-align: center;
	text-decoration: none;
	line-height: 16px;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

body {
	margin: 0;
}

header,
nav,
section {
	display: block;
}

h1 {
	font-size: 2em;
	margin: .67em 0;
}

pre {
	font-family: monospace, monospace;
}

a {
	background-color: transparent;
	-webkit-text-decoration-skip: objects;
}

strong {
	font-weight: 600;
}

code {
	font-family: monospace, monospace;
	font-size: .875rem;
}

img {
	border-style: none;
}

button,
optgroup,
select {
	font: inherit;
	margin: 0;
	color: inherit;
}

optgroup {
	font-weight: 700;
}

button {
	overflow: visible;
}

button,
select {
	text-transform: none;
}

button,
html [type=button] {
	-webkit-appearance: button;
}

[type=button]::-moz-focus-inner,
button::-moz-focus-inner {
	border-style: none;
	padding: 0;
}

[type=button]:-moz-focusring,
button:-moz-focusring {
	outline: 1px dotted ButtonText;
}

a {
	color: hsla(216, 100%, 39%, 1);
	color: var(--blue);
	cursor: pointer;
	text-decoration: none;
	word-wrap: break-word;
}

a:hover {
	text-decoration: underline;
}

a:active,
a:hover {
	color: hsla(216, 100%, 52%, 1);
	color: var(--blue-light);
}

a:visited {
	color: hsla(216, 100%, 39%, 1);
	color: var(--blue);
}

code {
	border-radius: 2px;
	display: inline-block;
	padding: 3px 7px;
}

code,
pre {
	border: 1px solid #83868b;
	background-color: #f9f9f9;
	font-size: .875rem;
}

pre {
	overflow: auto;
	padding: 16px;
	margin: 16px 0 0;
	direction: ltr;
	text-align: left;
	white-space: pre;
	word-spacing: normal;
	word-break: normal;
	word-wrap: normal;
	-moz-tab-size: 4;
	-o-tab-size: 4;
	tab-size: 4;
	-webkit-hyphens: none;
	-ms-hyphens: none;
	hyphens: none;
	-webkit-overflow-scrolling: touch;
}

pre code {
	border: 0;
	padding: 0;
	display: block;
}

p code {
	font-size: .8rem;
}

ul {
	margin: 0;
	padding: 0;
	margin-bottom: 16px;
}

select:focus {
	border-color: #aeb1b5;
	outline: 1px solid hsla(216, 100%, 39%, 1);
	outline: 1px solid var(--blue);
}

body select:-moz-focusring {
	color: transparent;
	text-shadow: 0 0 0 #000;
}

select::-ms-expand {
	display: none;
}

option {
	padding: 0;
	margin: 0;
}

code {
	direction: ltr;
}

.docon-exit-mode:before {
	content: "\FF0C";
}

.docon-editor-list-bullet:before {
	content: "\FF1E";
}

.docon-menu:before {
	content: "\FF2F";
}
/* ... */

